--- a/upload-notes/index.html
+++ b/upload-notes/index.html
@@ -23,6 +23,7 @@
             <a href="/upload-notes/">Upload Notes</a>
             <a href="/profile/">Profile</a>
         </nav>
+        <div class="menu"><i class="fa fas fas fa-bars"></i></div>
     </header>
     <div class="note-upload-section">
         <h2>Upload Your Notes</h2>
@@ -37,6 +38,19 @@
             <button type="submit" disabled>Upload</button>
         </form>
     </div>
+    <footer>
+        <div class="footer-text">
+            <h1>Join Today</h1>
+            <p>Create an Account to upload and manage your note. Helps Our Community to grow</p>
+            <button>Sign in</button>
+        </div>
+        <div class="rights-and-social">
+        <p>&copy; Mohit Deotare 2024 Notes Mania. All rights reserved.</p>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
