--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="/upload-notes/">Upload Notes</a>
                 <a href="/profile/">Profile</a>
             </nav>
+            <div class="menu"><i class="fa fas fas fa-bars"></i></div>  
         </header>
 
         <div class="hero-section" id="hero">
@@ -60,13 +61,13 @@
                     <img src="/images/maths.avif" alt="">
                     <h3>Mathematics</h3>
                     <p>Discover the world of numbers, shapes, and patterns.</p>
-                    <button class="notes">View Notes</button>
+                    <button class="notes"><a href="/class/">View Notes</a> </button>
                 </div>
                 <div class="subject">
                     <img src="/images/science.svg" alt="">
                     <h3>Science</h3>
                     <p>Learn about the universe and its mysteries.</p>
-                    <button class="notes">View Notes</button>
+                    <button class="notes"><a href="/class/">View Notes</a></button>
                 </div>
             </div>
         </div>
@@ -82,7 +83,6 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-
         </footer>
     </div>
 </body>
