--- a/notes/index.html
+++ b/notes/index.html
@@ -26,7 +26,7 @@
             <div class="menu"><i class="fa fas fas fa-bars"></i></div>
         </header>
         <div class="hero">
-            <h1 style="text-align: center;">Class Container</h1>
+            <h1 style="text-align: center;">User Notes Container</h1>
         </div>
     </div>
 </body>
