--- a/notes/index.html
+++ b/notes/index.html
@@ -6,7 +6,7 @@
     <title>Konichiwa</title>
     <link rel='stylesheet' href='style.css'>
     <script src='https://kit.fontawesome.com/0f0486bb75.js' crossorigin='anonymous'></script>
-    <script src='script.js' defer></script>
+    <script src='/script.js' defer></script>
 </head>
 
 <body>
