--- a/upload-notes/index.html
+++ b/upload-notes/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -10,47 +11,76 @@
 </head>
 
 <body>
-<div class="full-page-container">
-    <header>
-        <div class="logo">
-           <img src="/images/notes-illustration-3d-free-png.webp" alt="notes-img">
-           <span>Notes Mania</span>
-        </div>  
-        <nav>
-            <a href="/">Home</a>
-            <a href="/class/">Class</a>
-            <a href="/notes/">My Notes</a>
-            <a href="/upload-notes/">Upload Notes</a>
-            <a href="/profile/">Profile</a>
-        </nav>
-        <div class="menu"><i class="fa fas fas fa-bars"></i></div>
-    </header>
-    <div class="note-upload-section">
-        <h2>Upload Your Notes</h2>
-        <p>Share Your Notes with the community</p>
-        <form id="note-upload-form"  method="post" enctype="multipart/form-data">
-            <label for="note-file">Note Title</label>
-            <input type="text" name="note-title" id="note-title">
-            <label for="description">Description</label>
-            <input type="text" name="description" id="description">
-            <label for="note-file">Choose a file</label>
-            <input type="file" id="note-file" name="note-file" accept=".pdf,.docx,.txt,.jpg,.png,.jpeg">
-            <button type="submit" disabled>Upload</button>
-        </form>
+    <div class="full-page-container">
+        <header>
+            <div class="logo">
+                <img src="/images/notes-illustration-3d-free-png.webp" alt="notes-img">
+                <span>Notes Mania</span>
+            </div>
+            <nav>
+                <a href="/">Home</a>
+                <a href="/class/">Class</a>
+                <a href="/notes/">My Notes</a>
+                <a href="/upload-notes/">Upload Notes</a>
+                <a href="/profile/">Profile</a>
+            </nav>
+            <div class="menu"><i class="fa fas fas fa-bars"></i></div>
+        </header>
+        <div class="note-upload-section">
+            <h2>Upload Your Notes</h2>
+            <p>Share Your Notes with the community</p>
+            <form id="note-upload-form" method="post" enctype="multipart/form-data">
+                <label for="note-file">Note Title</label>
+                <input type="text" name="note-title" id="note-title">
+                <div class="notes-catagory">
+                    <div>
+                        <label for="class">Class:</label>
+                        <select name="class" id="" class="select-class">
+                            <option value="8">Class 8th</option>
+                            <option value="9">Class 9th</option>
+                            <option value="10">Class 10th</option>
+                            <option value="11">Class 11th</option>
+                            <option value="12">Class 12th</option>
+                            <option value="13">Year 1st</option>
+                            <option value="14">Year 2nd</option>
+                            <option value="15">Year 3rd</option>
+                        </select>
+                    </div>
+                    <div>
+                    <label for="stream">Stream:</label>
+                    <select name="stream" id="" class="select-stream">
+                        <option value="Science">Science</option>
+                        <option value="Commerce">Commerce</option>
+                        <option value="Arts">Arts</option>
+                        <option value="Arts">Arts</option>
+                        <option value="Arts">Arts</option>
+                        <option value="B.A">B.A</option>
+                        <option value="BCA">BCA</option>
+                        <option value="BBA">BBA</option>
+                    </select>
+                </div>
+            </div>
+                <label for="description">Description</label>
+                <input type="text" name="description" id="description">
+                <label for="note-file">Choose a file</label>
+                <input type="file" id="note-file" name="note-file" accept=".pdf,.docx,.txt,.jpg,.png,.jpeg">
+                <button type="submit" disabled>Upload</button>
+            </form>
+        </div>
+        <footer>
+            <div class="footer-text">
+                <h1>Join Today</h1>
+                <p>Create an Account to upload and manage your note. Helps Our Community to grow</p>
+                <button>Sign in</button>
+            </div>
+            <div class="rights-and-social">
+                <p>&copy; Mohit Deotare 2024 Notes Mania. All rights reserved.</p>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </footer>
     </div>
-    <footer>
-        <div class="footer-text">
-            <h1>Join Today</h1>
-            <p>Create an Account to upload and manage your note. Helps Our Community to grow</p>
-            <button>Sign in</button>
-        </div>
-        <div class="rights-and-social">
-        <p>&copy; Mohit Deotare 2024 Notes Mania. All rights reserved.</p>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-    </footer>
-</div>
 </body>
+
 </html>
