--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes Mania</title>
     <link rel='stylesheet' href='style.css'>
     <link href="https://fonts.googleapis.com/css?family=Funnel+Sans:300,regular,500,600,700,800,300" rel="stylesheet" />
@@ -46,6 +46,34 @@
             <form id="note-upload-form" method="post" enctype="multipart/form-data">
                 <label for="note-file">Note Title</label>
                 <input type="text" name="note-title" id="note-title">
+                <div class="notes-catagory">
+                    <div>
+                        <label for="class">Class:</label>
+                        <select name="class" id="" class="select-class">
+                            <option value="8">Class 8th</option>
+                            <option value="9">Class 9th</option>
+                            <option value="10">Class 10th</option>
+                            <option value="11">Class 11th</option>
+                            <option value="12">Class 12th</option>
+                            <option value="13">Year 1st</option>
+                            <option value="14">Year 2nd</option>
+                            <option value="15">Year 3rd</option>
+                        </select>
+                    </div>
+                    <div>
+                    <label for="stream">Stream:</label>
+                    <select name="stream" id="" class="select-stream">
+                        <option value="Science">Science</option>
+                        <option value="Commerce">Commerce</option>
+                        <option value="Arts">Arts</option>
+                        <option value="Arts">Arts</option>
+                        <option value="Arts">Arts</option>
+                        <option value="B.A">B.A</option>
+                        <option value="BCA">BCA</option>
+                        <option value="BBA">BBA</option>
+                    </select>
+                </div>
+            </div>
                 <label for="description">Description</label>
                 <input type="text" name="description" id="description">
                 <label for="note-file">Choose a file</label>
