--- a/upload-notes/index.html
+++ b/upload-notes/index.html
@@ -36,6 +36,7 @@
                     <div>
                         <label for="class">Class:</label>
                         <select name="class" id="" class="select-class">
+                            <option value="0">Select Class</option>
                             <option value="8">Class 8th</option>
                             <option value="9">Class 9th</option>
                             <option value="10">Class 10th</option>
@@ -49,11 +50,12 @@
                     <div>
                     <label for="stream">Stream:</label>
                     <select name="stream" id="" class="select-stream">
+                        <option value="0">Select Stream</option>
                         <option value="Science">Science</option>
                         <option value="Commerce">Commerce</option>
                         <option value="Arts">Arts</option>
-                        <option value="Arts">Arts</option>
-                        <option value="Arts">Arts</option>
+                        <option value="Bsc">B.sc.</option>
+                        <option value="Bcom">B.com.</option>
                         <option value="B.A">B.A</option>
                         <option value="BCA">BCA</option>
                         <option value="BBA">BBA</option>
